--- a/Makefile.am
+++ b/Makefile.am
@@ -1,20 +1,21 @@
 ## Process this file with automake to produce Makefile.in.
-
-# Copyright (C) 2003 Dale Mellor
-# Copyright (C) 2015, 2016 Mathieu Lirzin
+# Copyright © 2003 Dale Mellor <dale_mellor@users.sourceforge.net>
+# Copyright © 2015, 2016 Mathieu Lirzin <mthl@gnu.org>
 #
-# This program is free software: you can redistribute it and/or modify
+# This file is part of GNU Mcron.
+#
+# GNU Mcron is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
 #
-# This program is distributed in the hope that it will be useful,
+# GNU Mcron is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+# along with GNU Mcron.  If not, see <http://www.gnu.org/licenses/>.
 
 bin_PROGRAMS = mcron crontab
 sbin_PROGRAMS = cron
