maint: Delete BUGS.
* BUGS: Delete.
* Makefile.am (EXTRA_DIST): Adapt.
* README: Likewise.

--- a/Makefile.am
+++ b/Makefile.am
@@ -137,7 +137,7 @@ uninstall-hook:
         rm -f $(fpp){cron,crontab}$(EXEEXT); \
     fi
 
-EXTRA_DIST = BUGS $(TESTS)
+EXTRA_DIST = $(TESTS)
 MAINTAINERCLEANFILES = $(dist_man_MANS)
 DISTCLEANFILES = src/config.scm
 CLEANFILES = \
