build: Rename (mcron main) to (mcron utils).
* src/mcron/main.scm: Rename to ...
* src/mcron/utils.scm: ... this.
* src/mcron/scripts/cron.scm: Adapt.
* src/mcron/scripts/crontab.scm: Likewise.
* src/mcron/scripts/mcron.scm: Likewise.
* Makefile.am (dist_mcronmodule_DATA): Likewise.

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,8 +40,8 @@ dist_mcronmodule_DATA = \
   src/mcron/base.scm \
   src/mcron/environment.scm \
   src/mcron/job-specifier.scm \
-  src/mcron/main.scm \
   src/mcron/redirect.scm \
+  src/mcron/utils.scm \
   src/mcron/vixie-specification.scm \
   src/mcron/vixie-time.scm
 
