maint: Generate version number.
* build-aux/git-version-gen: New script.
* configure.ac (AC_INIT): Use it.
(AC_REQUIRE_AUX_FILE): Distribute it.
* Makefile.am (.version): New target.
(BUILT_SOURCES, EXTRA_DIST): Add it.
(dist-hook): Generate ".tarball-version".
* .gitignore: Update.

--- a/Makefile.am
+++ b/Makefile.am
@@ -97,7 +97,12 @@ TESTS = \
 SUFFIXES = .go
 noinst_SCRIPTS = pre-inst-env
 
+BUILT_SOURCES= .version
+.version:
+	$(AM_V_GEN)echo $(VERSION) > $@-t && mv $@-t $@
+
 dist-hook: gen-ChangeLog
+	$(AM_V_GEN)echo $(VERSION) > $(distdir)/.tarball-version
 
 gen_start_date = 2015-06-26
 .PHONY: gen-ChangeLog
@@ -137,7 +142,10 @@ uninstall-hook:
         rm -f $(fpp){cron,crontab}$(EXEEXT); \
     fi
 
-EXTRA_DIST = $(TESTS)
+EXTRA_DIST = \
+  .version \
+  $(TESTS)
+
 MAINTAINERCLEANFILES = $(dist_man_MANS)
 DISTCLEANFILES = src/config.scm
 CLEANFILES = \
