build: Move executable to "bin" directory.
* Makefile.am (bin_PROGRAMS, sbin_PROGRAMS): Prepend "bin/" to every program.
(mcron_SOURCES, mcron_CPPFLAGS, mcron_DEPENDENCIES): Rename to ...
(bin_mcron_SOURCES, bin_mcron_CPPFLAGS, bin_mcron_DEPENDENCIES): ... this.
(cron_SOURCES, cron_CPPFLAGS, cron_DEPENDENCIES): Rename to ...
(bin_cron_SOURCES, bin_cron_CPPFLAGS, bin_cron_DEPENDENCIES): ... this.
(crontab_SOURCES, crontab_CPPFLAGS, crontab_DEPENDENCIES): Rename to ...
(bin_crontab_SOURCES, bin_crontab_CPPFLAGS, bin_crontab_DEPENDENCIES):
($(srcdir)/doc/cron.8, $(srcdir)/doc/crontab.1, $(srcdir)/doc/mcron.1): Update
prerequisite.
* build-aux/pre-inst-env.in (PATH): Use "bin" directory.
* .gitignore: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *~
 .deps
 .dirstamp
+/bin/cron
+/bin/crontab
+/bin/mcron
 /build-aux/compile
 /build-aux/config.guess
 /build-aux/config.sub
@@ -13,8 +16,6 @@
 /build-aux/mdate-sh
 /build-aux/missing
 /build-aux/texinfo.tex
-/cron
-/crontab
 /doc/config.texi
 /doc/cron.8
 /doc/crontab.1
@@ -22,7 +23,6 @@
 /doc/mcron.info
 /doc/stamp-vti
 /doc/version.texi
-/mcron
 /mdate-sh
 /.version
 INSTALL
