build: Remove "--enable-debug" configure option
Unlike C code where debugging impose the "-g" compilation flags.  This
debugging option only affects Guile code, so using an environment variable
works better since it doesn't impose to recompile Mcron or to edit
"config.scm".

* configure.ac: Remove "--enable-debug" configure option.
* src/mcron/config.scm.in (config-debug): Use MCRON_DEBUG environment variable
to trigger the debug mode at runtime.

--- a/src/mcron/config.scm.in
+++ b/src/mcron/config.scm.in
@@ -19,7 +19,6 @@
 
 (define-module (mcron config))
 
-(define-public config-debug @CONFIG_DEBUG@)
 (define-public config-package-name "@PACKAGE_NAME@")
 (define-public config-package-version "@PACKAGE_VERSION@")
 (define-public config-package-string "@PACKAGE_STRING@")
@@ -33,3 +32,11 @@
 (define-public config-deny-file "@CONFIG_DENY_FILE@")
 (define-public config-pid-file "@CONFIG_PID_FILE@")
 (define-public config-tmp-dir "@CONFIG_TMP_DIR@")
+
+;;;
+;;; Runtime configuration
+;;;
+
+(define-public config-debug
+  ;; Trigger the display of Guile stack traces on errors.
+  (getenv "MCRON_DEBUG"))
