wrapper: Move 'wrap_env_path' to a new 'utils' module.
* src/wrapper.c: Move 'wrap_env_path' to ...
* src/utils.h: ... here.  New module.
* src/utils.c: New file.
* configure.ac: Use AC_PROG_RANLIB and AM_PROG_AR.
* Makefile.am (noinst_LIBRARIES, src_libmcron_a_SOURCES): New variables.
(LDADD): Add 'src/libmcron.a'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+*.[oa]
 *.go
 *.log
-*.o
 *.trs
 *~
 .deps
@@ -8,6 +8,7 @@
 /bin/cron
 /bin/crontab
 /bin/mcron
+/build-aux/ar-lib
 /build-aux/compile
 /build-aux/config.guess
 /build-aux/config.sub
