Replace generic C wrapper with individual programs
* src/wrapper.c: Delete.
* src/crontab.c: New file.
* src/mcron.c: Likewise.
* src/cron.c: Likewise.
* configure.ac: Adapt 'AC_CONFIG_DIR' to use "src/mcron.c".
* Makefile.am (bin_crontab_SOURCES, bin_cron_SOURCES)
(bin_mcron_SOURCES): Use new files.
(bin_cron_CPPFLAGS, bin_mcron_CPPFLAGS, bin_crontab_CPPFLAGS): Delete.

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,16 +38,13 @@ AM_CPPFLAGS = \
 AM_CFLAGS = @GUILE_CFLAGS@
 LDADD = @GUILE_LIBS@ src/libmcron.a
 
-bin_mcron_SOURCES = src/wrapper.c
-bin_mcron_CPPFLAGS = $(AM_CPPFLAGS) -DPROGRAM="\"mcron\""
+bin_mcron_SOURCES = src/mcron.c
 bin_mcron_DEPENDENCIES = $(compiled_modules)
 
-bin_cron_SOURCES = src/wrapper.c
-bin_cron_CPPFLAGS = $(AM_CPPFLAGS) -DPROGRAM="\"cron\""
+bin_cron_SOURCES = src/cron.c
 bin_cron_DEPENDENCIES = $(compiled_modules)
 
-bin_crontab_SOURCES = src/wrapper.c
-bin_crontab_CPPFLAGS = $(AM_CPPFLAGS) -DPROGRAM="\"crontab\""
+bin_crontab_SOURCES = src/crontab.c
 bin_crontab_DEPENDENCIES = $(compiled_modules)
 
 # wrapper to be used in the build environment and for running tests.
