Revert "Fix build of the manual."
This reverts commit e6a94adeb3384cb883f49ec5a4cc589df6b40d10.

--- a/.gitignore
+++ b/.gitignore
@@ -10,18 +10,13 @@ config.status
 configure
 core.scm
 depcomp
-/doc/.dirstamp
-/doc/config.texi
-/doc/mcron.info
-/doc/mcron.1
-/doc/stamp-vti
-/doc/version.texi
 install-sh
 makefile
 makefile.in
 /mcron
 mcron.c
-/mdate-sh
+mcron.info
 *.o
+mcron.texinfo
 missing
 texinfo.tex
