--- a/makefile.am
+++ b/makefile.am
@@ -1,6 +1,5 @@
 ## Makefile for the toplevel directory of mcron.
 ## Copyright (C) 2003 Dale Mellor
-## Copyright (C) 2015 Mathieu Lirzin
 ##
 #    This file is part of GNU mcron.
 # 
@@ -32,9 +31,9 @@ CLEANFILES = mcron.c
 
 EXTRA_DIST = makefile.ed mcron.c.template BUGS
 
-info_TEXINFOS = doc/mcron.texi
+info_TEXINFOS = mcron.texinfo
 
-dist_man_MANS = doc/mcron.1
+dist_man_MANS = mcron.1
 
 bin_PROGRAMS = mcron
 mcron_SOURCES = mcron.c
@@ -80,6 +79,6 @@ uninstall-hook:
 
 # Not part of formal package building, but a rule for manual use to get the
 # elemental man page.  Will only work once the mcron program is installed.
-$(dist_man_MANS): mcron.c
+mcron.1 : mcron.c
 	$(HELP2MAN) -n 'a program to run tasks at regular (or not) intervals' \
-	    ./mcron > $@
+	    ./mcron > mcron.1
