tests: Add 'basic.sh'
* tests/init.sh: New test framework from Gnulib.
* tests/basic.sh: New test.
* Makefile.am (TESTS): Add it.
(TEST_EXTENSIONS): Add '.sh'.
(SH_LOG_COMPILER): Use 'pre-inst-env'.
(EXTRA_DIST): Add 'tests/init.sh'.
* build-aux/pre-inst-env.in: export $srcdir for shell tests.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /build-aux/install-sh
 /build-aux/mdate-sh
 /build-aux/missing
+/build-aux/test-driver
 /build-aux/texinfo.tex
 /doc/config.texi
 /doc/cron.8
