tests: Add 'schedule.sh'
* tests/schedule.sh: New test.
* Makefile.am (TESTS): Add it.
* src/mcron/job-specifier.scm (configuration-time): Use
SOURCE_DATE_EPOCH for reproducible tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -135,6 +135,7 @@ SCM_LOG_DRIVER = \
 
 TESTS = \
   tests/basic.sh \
+  tests/schedule.sh \
   tests/environment.scm \
   tests/job-specifier.scm
 
