build: Programs are not implicitly depending on libraries
Before that change, it was possible for 'make' to try linking programs
before 'src/libmcron.a' was built.

* Makefile.am (bin_mcron_DEPENDENCIES, bin_cron_DEPENDENCIES)
(bin_crontab_DEPENDENCIES): Add '$(noinst_LIBRARIES)'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,13 +39,13 @@ AM_CFLAGS = @GUILE_CFLAGS@
 LDADD = @GUILE_LIBS@ src/libmcron.a
 
 bin_mcron_SOURCES = src/mcron.c
-bin_mcron_DEPENDENCIES = $(compiled_modules)
+bin_mcron_DEPENDENCIES = $(compiled_modules) $(noinst_LIBRARIES)
 
 bin_cron_SOURCES = src/cron.c
-bin_cron_DEPENDENCIES = $(compiled_modules)
+bin_cron_DEPENDENCIES = $(compiled_modules) $(noinst_LIBRARIES)
 
 bin_crontab_SOURCES = src/crontab.c
-bin_crontab_DEPENDENCIES = $(compiled_modules)
+bin_crontab_DEPENDENCIES = $(compiled_modules) $(noinst_LIBRARIES)
 
 # wrapper to be used in the build environment and for running tests.
 noinst_SCRIPTS = pre-inst-env
