build: Handle all programs names transformations
Previously only prepending a prefix was handled when installing 'crontab'.
Using the 'transform' Make macro allows the installation process to support
generic transformations as defined by the '--program-suffix' and
'--program-transform-name' configure options.

* configure.ac: Don't substitue '@real_program_prefix@'.
* Makefile.am (fpp): Remove.
(transform_exe): New macro.
[MULTI_USER] (install-exec-hook): Use it when installing 'crontab'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -172,12 +172,13 @@ EXTRA_DIST = \
 ## Installation.  ##
 ## -------------- ##
 
-#full program prefix
-fpp = $(DESTDIR)$(bindir)/@real_program_prefix@
+# Sed command for Transforming program names.
+transform_exe = s/$(EXEEXT)$$//;$(transform);s/$$/$(EXEEXT)/
 
 if MULTI_USER
 install-exec-hook:
-	chmod u+s $(fpp)crontab$(EXEEXT)
+	tcrontab=`echo crontab$(EXEEXT) | sed '$(transform_exe)'`; \
+	chmod u+s $(DESTDIR)$(bindir)/$${tcrontab}
 endif
 
 ## --------------- ##
