build: Properly set Guile load paths in programs
This fixes an issue where the installed Guile load paths were set by the
undefined 'moduledir' Make macro.

* Makefile.am (AM_CPPFLAGS): Define PACKAGE_LOAD_PATH with
'guilesitedir' macro and PACKAGE_LOAD_COMPILED_PATH with
'guilesitegodir'.
* NEWS: Update.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,8 +31,8 @@ noinst_PROGRAMS = bin/cron bin/crontab
 endif
 
 AM_CPPFLAGS = \
-  -DPACKAGE_LOAD_PATH=\"$(moduledir)\" \
-  -DPACKAGE_LOAD_COMPILED_PATH=\"$(moduledir)\" \
+  -DPACKAGE_LOAD_PATH=\"$(guilesitedir)\" \
+  -DPACKAGE_LOAD_COMPILED_PATH=\"$(guilesitegodir)\" \
   -D_GNU_SOURCE
 
 AM_CFLAGS = @GUILE_CFLAGS@
