tests: Add "tests/base.scm"
* tests/base.scm: New test.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -136,6 +136,7 @@ SCM_LOG_DRIVER = \
 TESTS = \
   tests/basic.sh \
   tests/schedule.sh \
+  tests/base.scm \
   tests/environment.scm \
   tests/job-specifier.scm
 
