tests: Add "tests/utils.scm"
* tests/utils.scm: New test.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -138,7 +138,8 @@ TESTS = \
   tests/schedule.sh \
   tests/base.scm \
   tests/environment.scm \
-  tests/job-specifier.scm
+  tests/job-specifier.scm \
+  tests/utils.scm
 
 ## -------------- ##
 ## Distribution.  ##
