tests: Add "tests/vixie-time.scm"
* tests/vixie-time.scm: New test.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -139,7 +139,8 @@ TESTS = \
   tests/base.scm \
   tests/environment.scm \
   tests/job-specifier.scm \
-  tests/utils.scm
+  tests/utils.scm \
+  tests/vixie-time.scm
 
 ## -------------- ##
 ## Distribution.  ##
