final push for 1.1.2

--- a/configure.ac
+++ b/configure.ac
@@ -20,13 +20,10 @@
 # along with GNU Mcron.  If not, see <http://www.gnu.org/licenses/>.
 
 AC_PREREQ(2.61)
-AC_INIT([GNU Mcron],
-  m4_esyscmd([build-aux/git-version-gen .tarball-version]),
-  [bug-mcron@gnu.org])
+AC_INIT([GNU Mcron], [1.1.2], [bug-mcron@gnu.org])
 AC_CONFIG_SRCDIR([src/mcron.c])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_REQUIRE_AUX_FILE([test-driver.scm])
-AC_REQUIRE_AUX_FILE([git-version-gen])
 AM_INIT_AUTOMAKE([subdir-objects -Wall -Wno-override std-options])
 AM_SILENT_RULES([yes])		# enables silent rules by default
 
